tests/_resources/error_gcns/E001_missing_semicolon.expected
error[E001]: Missing semicolon. Found ''Y''
  --> E001_missing_semicolon.gcn:6:9
     |
   4 |     identities
   5 |     {
   6 |         Y[] = C[] + I[]
     |         ^ missing semicolon
   7 |         X[] = K[];
   8 |     };
     |
   = note: Add ';' at the end of the statement
   = note: Check that each equation ends with ';'
   = note: Check that each block component ends with '};'
