tests/_resources/error_gcns/E001_missing_semicolon.gcn
# Error: Missing semicolon after equation
block HOUSEHOLD
{
    identities
    {
        Y[] = C[] + I[]
        X[] = K[];
    };
};
